uploading images on the admin page

--- a/members/templates/main.html
+++ b/members/templates/main.html
@@ -395,6 +395,9 @@
       </div>
     </div>
     </main>
+    <footer>
+      <p>&copy; 2024 Brenda W. All rights reserved.</p>
+  </footer>
   </body>
 </html>
 {% endblock %}
